--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <meta property="og:title" content="Optical" />
       <meta property="og:image" content="https://fed66b08-71c1-404f-9e5a-c235262a097d.id.repl.co/img/Optical.png" />
       <meta property="og:description" content="Pagina Oficial De Optical Network" />
+<script src="script.js"></script>
     </head>
     <body background="./img/background.jpg">
         <header>
@@ -23,9 +24,28 @@
 
         <section>
             <h1 class="titulos1">¿Quienes somos?</h1>
+            <div class="slider">
+            <div class="slide" id="first">
+                <h3 id="h3c">SkyWars</h3>
+            </div>
+            <div class="slide" id="second">
+                <h3 id="h3c">BedWars</h3>
+            </div>
+            <div class="slide" id="third">
+                <h3 id="h3c">The Bridge</h3>
+            </div>
+            <button class="buttoncar" id="check-left" onclick="moveSlide(1)">
+                <span class="material-icons" id="spanc">
+                    <
+                </span>
+            </button>
+            <button class="buttoncar" id="check-right" onclick="moveSlide(-1)">
+                <span class="material-icons" id="spanc">
+                    >
+                </span>
+            </button>
+        </div>
         </section>
-
-    
         
     </body>
 </html>
